Clean up basic service
