# src/main/scala/com/ynap/dpetapi/endpoints/DivisionsHandlerImpl.scala
@@ -1,70 +1,0 @@
-package com.ynap.dpetapi.endpoints
-
-import cats.Applicative
-import cats.implicits._
-import com.ynap.dpetapi.database.DatabaseClient.Databases
-import scala.util.{Failure, Success}
-import com.ynap.dpetapi.endpoints.divisions.{DivisionsHandler, GetDivisionsResponse}
-import com.ynap.dpetapi.database.DatabaseClient
-import com.ynap.dpetapi.endpoints.definitions.DivisionsResponse
-
-case class Division(id: Int, name: String, shortname: String, active: Boolean)
-
-class DivisionsHandlerImpl[F[_] : Applicative]() extends DivisionsHandler[F] {
-
-  override def getDivisions(respond: GetDivisionsResponse.type)(
-    id: Option[Int],
-    name: Option[String],
-    pageNumber: Option[Int],
-    pageSize: Option[Int]
-  ): F[GetDivisionsResponse] = {
-
-    val query = (id, name, pageNumber, pageSize) match {
-      case (Some(divId), _, _, _) =>
-        s"""
-             |SELECT ID_Divisione as id, Descrizione as name, ShortName, Attivo as active FROM Divisione
-             |WHERE ID_Divisione = ${divId}
-             |    ORDER BY 1
-       """.stripMargin
-      case (None, Some(namePattern), _, _) =>
-        s"""
-             |SELECT ID_Divisione as id, Descrizione as name, ShortName, Attivo as active FROM Divisione
-             |WHERE Descrizione like '${namePattern}'
-             |    ORDER BY 1
-       """.stripMargin
-      case (None, None, Some(pageNum), Some(pageSiz)) =>
-        val from = (pageNum - 1) * pageSiz
-        val to = from + pageSiz
-        s"""
-             |SELECT ID_Divisione as id, Descrizione as name, ShortName, Attivo as active
-             |    FROM (
-             |    SELECT ID_Divisione, Descrizione, ShortName, Attivo,
-             |        ROW_NUMBER() OVER (ORDER BY ID_Divisione, Descrizione, ShortName) AS RowNumber
-             |        FROM Divisione) Divisione
-             |    WHERE RowNumber > $from
-             |        AND RowNumber <= $to
-             |    ORDER BY 1
-       """.stripMargin
-      case (None, None, _, _) =>
-        s"""
-           |    SELECT ID_Divisione as id, Descrizione as name, ShortName, Attivo as active
-           |        FROM Divisione
-           |    ORDER BY 1
-       """.stripMargin
-    }
-    var res = for {
-      client <- DatabaseClient.getClient(Databases.Fashion)
-      result <- client.run(query, DatabaseClient.getJsonList)
-    } yield
-      result
-    res match {
-      case Failure(ex) => throw ex
-      case Success(rs) =>
-        for {
-          divisions <- Some(rs).pure[F]
-        } yield
-          respond.Ok(DivisionsResponse(Some(rs.length), divisions))
-    }
-  }
-
-}
